--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-promise": "^0.6.0",
+    "redux-promise-middleware": "^6.1.2",
     "styled-components": "^5.2.0"
   },
   "scripts": {
