--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
+    "recharts": "^2.0.6",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-promise": "^0.6.0",
