--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@mdi/js": "^5.9.55",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@mdi/react": "^1.5.0",
     "redux-devtools": "^3.7.0"
   }
 }
