--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.13.1",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^16.13.1",
+    "react-geocode": "^0.2.3",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
@@ -24,7 +25,7 @@
     "redux-actions": "^2.6.5",
     "redux-promise": "^0.6.0",
     "redux-promise-middleware": "^6.1.2",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
