--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "apexcharts": "^3.25.0",
     "axios": "^0.18.1",
     "js-sha256": "^0.9.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "react": "^16.13.1",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^16.13.1",
@@ -25,7 +27,7 @@
     "redux-actions": "^2.6.5",
     "redux-promise": "^0.6.0",
     "redux-promise-middleware": "^6.1.2",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
