--- a/src/config.json
+++ b/src/config.json
@@ -1,3 +1,3 @@
 {
-    "apiEndpoint": "https://henovenalfa.000webhostapp.com//Henoven/Tests/Beta/Api/"
+    "apiEndpoint": "https://henovenalfa.000webhostapp.com//Henoven/Tests/Beta/Api/index.php"
 }
